# micro-arch

./: .gitignore  README.md  arch_diagram.drawio  auth-svc.http  collection.http  collection.hurl  docker-compose.yml  http-client.env.json
auth/: Dockerfile
auth-svc/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  init.sql
auth-svc/.sqlx/: query-3e4e5c4be44ef130a6e886ed815bdf3e8d3d3f61e17713aa10f9912522cd84ca.json
auth-svc/http/: test.http
auth-svc/manifests/: auth-deploy.yaml  secret.yaml  service.yaml
auth-svc/mysql-scripts/: init.sql
auth-svc/src/: handlers.rs  main.rs
auth/src/: index.ts  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json
docs/: .$micro-arch.drawio.bkp  micro-arch.drawio
gateway-svc/: Dockerfile  README.md  requirements.txt  server.py
gateway-svc/auth/: validate.py
gateway-svc/auth_svc/: access.py
gateway-svc/manifests/: configmap.yaml  gateway-deploy.yaml  ingress.yaml  secret.yaml  service.yaml
gateway-svc/storage/: util.py
mp3-svc/: Dockerfile  build.gradle  settings.gradle
mp3-svc/src/: index.ts  package-lock.json  package.json
mp3-svc/src/main/java/com/micro_arch/mp3_svc/: Mp3SvcApplication.java
mp3-svc/src/main/resources/: .env.properties  application.properties
notification-svc/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
notification-svc/src/: index.ts
rabbit/: definitions.json
rabbit/manifests/: configmap.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  statefulset.yaml
(+10 files in other folders)
