[package]
name = "auth-svc"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
jsonwebtoken = "9"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.38"
futures = "0.3.30"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "mysql", "macros"] }
dotenv = "0.15.0"
base64 = "0.22.1"
serde_json = "1.0.125"
